added all elements of responsive layout

--- a/src/partials/shared/header.html
+++ b/src/partials/shared/header.html
@@ -10,12 +10,12 @@
                     <li class="link-item">
                         <a class="link" href="./index.html">Studio</a>
                     </li>
-                    <!-- <li class="link-item">
+                    <li class="link-item">
                         <a class="link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="link-item">
                         <a class="link" href="./contacts.html">Contacts</a>
-                    </li> -->
+                    </li>
                 </ul>
 
                 <ul class="header-contacts">
