--- a/src/sass/components/main/_examples.scss
+++ b/src/sass/components/main/_examples.scss
@@ -1,7 +1,7 @@
 .examples {
   padding-bottom: 94px;
 
-  @media screen and (min-width: 450px) and (max-width: 1199px) {
+  @media screen and (min-width: 350px) and (max-width: 1199px) {
     display: none;
   }
 }
@@ -24,7 +24,7 @@
   margin-left: 30px;
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     top: 79%;
     left: 0;
