--- a/src/sass/components/main/_modal.scss
+++ b/src/sass/components/main/_modal.scss
@@ -39,13 +39,12 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 528px;
   margin-left: auto;
   margin-right: auto;
   padding: 40px;
 
   @media screen and (max-width: 1199px) {
-    width: 450px;
+    width: 350px;
   }
 }
 
@@ -90,6 +89,10 @@
   &:hover + .form-label {
     color: $main-accent-color;
     transform: translate(-44%, -370%);
+
+    @media screen and (max-width: 1199px) {
+      transform: translate(-44%, -390%);
+    }
   }
 
   &:not(:placeholder-shown) + .form-label {
@@ -101,6 +104,9 @@
 .form-label {
   transform: translate(-38%, -170%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (max-width: 1199px) {
+    transform: translate(-36%, -170%);
+  }
 }
 
 .form-icon {
@@ -128,6 +134,10 @@
 
 .form-label.comment {
   transform: translate(-41%, -770%);
+
+  @media screen and (max-width: 1199px) {
+    transform: translate(-39%, -740%);
+  }
 }
 
 .checkbox {
@@ -140,7 +150,7 @@
   }
 }
 
-.checkbox input[type="checkbox"] {
+.checkbox input[type='checkbox'] {
   margin-right: 5px;
   width: 16px;
   height: 15px;
@@ -155,7 +165,7 @@
 .close-btn {
   position: absolute;
   top: 8px;
-  right: -25px;
+  right: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -198,7 +208,7 @@
   background-origin: border-box;
   border-color: $main-accent-color;
   background-color: $main-accent-color;
-  background-image: url("../../images/svg/vector-check.svg");
+  background-image: url(/src/images/svg/vector-check.svg);
   background-size: contain;
 }
 
