--- a/src/partials/shared/footer.html
+++ b/src/partials/shared/footer.html
@@ -16,7 +16,7 @@
             <b class="invocation">Join</b>
             <ul class="team-item-social ">
                 <li class="footer-option">
-                    <a href="" aria-label="instagram" class="team-item-link footer-link">
+                    <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link footer-link">
                         <div>
                             <svg class="link-img footer-img" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li class="footer-option">
-                    <a href="" aria-label="twitter" class="team-item-link footer-link">
+                    <a href="https://twitter.com/" aria-label="twitter" class="team-item-link footer-link">
                         <div>
                             <svg class="link-img footer-img" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="footer-option">
-                    <a href="" aria-label="facebook" class="team-item-link footer-link">
+                    <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link footer-link">
                         <div>
                             <svg class="link-img footer-img" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li class="footer-option">
-                    <a href="" aria-label="linkedIn" class="team-item-link footer-link">
+                    <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link footer-link">
                         <div>
                             <svg class="link-img footer-img" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
