--- a/src/partials/shared/modal.html
+++ b/src/partials/shared/modal.html
@@ -33,7 +33,7 @@
             </div>
 
             <label class="checkbox" for="policy">
-                <input class="checkbox-form" value="accept-policy" type="checkbox" name="policy" id="policy" />
+                <input class="checkbox-form" value="accept-policy" type="checkbox" name="policy" id="policy" required />
                 <span class="checkbox-icon"></span>
                 <span class="checkbox-text">I accept <a class="checkbox-link" href="./index.html">Contract terms and
                         conditions</a></span>
