--- a/src/partials/main/team.html
+++ b/src/partials/main/team.html
@@ -22,7 +22,7 @@
                 <p class="member-position">Product Designer</p>
                 <ul class="team-item-social ">
                     <li class="team-item-option">
-                        <a href="" aria-label="instagram" class="team-item-link">
+                        <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="twitter" class="team-item-link">
+                        <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="facebook" class="team-item-link">
+                        <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
@@ -49,7 +49,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="linkedIn" class="team-item-link">
+                        <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
@@ -80,7 +80,7 @@
                 <p class="member-position">Frontend Developer</p>
                 <ul class="team-item-social ">
                     <li class="team-item-option">
-                        <a href="" aria-label="linkedIn" class="team-item-link">
+                        <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
@@ -89,7 +89,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="twitter" class="team-item-link">
+                        <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
@@ -98,7 +98,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="facebook" class="team-item-link">
+                        <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
@@ -107,7 +107,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="linkedIn" class="team-item-link">
+                        <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
@@ -138,7 +138,7 @@
                 <p class="member-position">Marketing</p>
                 <ul class="team-item-social">
                     <li class="team-item-option">
-                        <a href="" aria-label="instagram" class="team-item-link">
+                        <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
@@ -147,7 +147,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="twitter" class="team-item-link">
+                        <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
@@ -156,7 +156,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="facebook" class="team-item-link">
+                        <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
@@ -165,7 +165,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="linkedIn" class="team-item-link">
+                        <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
@@ -196,7 +196,7 @@
                 <p class="member-position ">UI Designer</p>
                 <ul class="team-item-social">
                     <li class="team-item-option">
-                        <a href="" aria-label="instagram" class="team-item-link">
+                        <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
@@ -205,7 +205,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="twitter" class="team-item-link">
+                        <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
@@ -214,7 +214,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="facebook" class="team-item-link">
+                        <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
@@ -223,7 +223,7 @@
                         </a>
                     </li>
                     <li class="team-item-option">
-                        <a href="" aria-label="linkedIn" class="team-item-link">
+                        <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
                                     <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
