--- a/src/partials/main/team.html
+++ b/src/partials/main/team.html
@@ -4,18 +4,15 @@
         <ul class="team-list ">
             <li class="team-item">
                 <picture>
-                    <source srcset="./images/jpeg/main/team/mobile/NK_mobile/NK_img.jpg 1x,
-                                            ./images/jpeg/main/team/mobile/NK_mobile/NK_img@2x.jpg 2x"
-                        media="(max-width: 767px)" />
-                    <source srcset="
-                                                    ./images/jpeg/main/team/tablet/NK_tablet/NK_img.jpg   1x,
-                                                    ./images/jpeg/main/team/tablet/NK_tablet/NKimg@2x.jpg 2x
-                                                      " media="(max-width: 1199px)" />
-                    <source srcset="
-                                                    ./images/jpeg/main/team/desktop/NK_desktop/NK_img.jpg   1x,
-                                                    ./images/jpeg/main/team/desktop/NK_desktop/NK_img@2x.jpg 2x
-                                                      " media="(min-width: 1200px)" />
-                    <img class="item-logo" src="./images/jpeg/main/team/mobile/NK_mobile/NK_img.jpg"
+                    <source srcset="/src/images/jpeg/main/team/mobile/NK_mobile/NK_img@2x.jpg 2x,
+                    /src/images/jpeg/main/team/mobile/NK_mobile/NK_img.jpg 1x" media="(max-width: 767px)" />
+                    <source srcset=" /src/images/jpeg/main/team/tablet/NK_tablet/NKimg@2x.jpg 2x,
+                                    /src/images/jpeg/main/team/tablet/NK_tablet/NK_img.jpg   1x"
+                        media="(max-width: 1199px)" />
+                    <source srcset="/src/images/jpeg/main/team/desktop/NK_desktop/NK_img@2x.jpg 2x,
+                                    /src/images/jpeg/main/team/desktop/NK_desktop/NK_img.jpg   1x"
+                        media="(min-width: 1200px)" />
+                    <img class="item-logo" src="/src/images/jpeg/main/team/mobile/NK_mobile/NK_img.jpg"
                         alt="Nick Kucherenko" />
                 </picture>
                 <h3 class="team-member">Nick Kucherenko</h3>
@@ -25,7 +22,7 @@
                         <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-insta"></use>
                                 </svg>
                             </div>
                         </a>
@@ -34,7 +31,7 @@
                         <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </div>
                         </a>
@@ -43,7 +40,7 @@
                         <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </div>
                         </a>
@@ -52,7 +49,7 @@
                         <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </div>
                         </a>
@@ -61,19 +58,21 @@
             </li>
             <li class="team-item">
                 <picture>
-                    <source srcset="
-                        ./images/jpeg/main/team/mobile/OI_mobile/OI_img.jpg 1x,
-                        ./images/jpeg/main/team/mobile/OI_mobile/OI_img@2x.jpg 2x   
+                    <source srcset="/src/images/jpeg/main/team/mobile/OI_mobile/OI_img@2x.jpg 2x,
+                                    /src/images/jpeg/main/team/mobile/OI_mobile/OI_img.jpg 1x
+                           
                                 " media="(max-width: 767px)" />
                     <source srcset="
-                            ./images/jpeg/main/team/tablet/OI_tablet/OI_img.jpg   1x,
-                            ./images/jpeg/main/team/tablet/OI_tablet/OI_img@2x.jpg 2x
+                    /src/images/jpeg/main/team/tablet/OI_tablet/OI_img@2x.jpg 2x,
+                            /src/images/jpeg/main/team/tablet/OI_tablet/OI_img.jpg   1x
+                            
                               " media="(max-width: 1199px)" />
                     <source srcset="
-                            ./images/jpeg/main/team/desktop/OI_desktop/OI_img.jpg   1x,
-                            ./images/jpeg/main/team/desktop/OI_desktop/OI_img@2x.jpg 2x
+                    /src/images/jpeg/main/team/desktop/OI_desktop/OI_img@2x.jpg 2x,
+                            /src/images/jpeg/main/team/desktop/OI_desktop/OI_img.jpg   1x
+                            
                               " media="(min-width: 1200px)" />
-                    <img class="item-logo" src="./images/jpeg/main/team/mobile/OI_mobile/OI_img.jpg"
+                    <img class="item-logo" src="/src/images/jpeg/main/team/mobile/OI_mobile/OI_img.jpg"
                         alt="Olha Ivanchenko" />
                 </picture>
                 <h3 class="team-member">Olha Ivanchenko</h3>
@@ -83,7 +82,7 @@
                         <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-insta"></use>
                                 </svg>
                             </div>
                         </a>
@@ -92,7 +91,7 @@
                         <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </div>
                         </a>
@@ -101,7 +100,7 @@
                         <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </div>
                         </a>
@@ -110,7 +109,7 @@
                         <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </div>
                         </a>
@@ -120,18 +119,18 @@
             <li class="team-item">
                 <picture>
                     <source srcset="
-                        ./images/jpeg/main/team/mobile/AS_mobile/AS_img.jpg 1x,
-                        ./images/jpeg/main/team/mobile/AS_mobile/AS_img@2x.jpg 2x   
+                    /src/images/jpeg/main/team/mobile/AS_mobile/AS_img@2x.jpg 2x,
+                        /src/images/jpeg/main/team/mobile/AS_mobile/AS_img.jpg 1x                          
                                 " media="(max-width: 767px)" />
                     <source srcset="
-                            ./images/jpeg/main/team/tablet/AS_tablet/AS_img.jpg   1x,
-                            ./images/jpeg/main/team/tablet/AS_tablet/AS_img@2x.jpg 2x
-                              " media="(max-width: 1199px)" />
+                    /src/images/jpeg/main/team/tablet/AS_tablet/AS_img@2x.jpg 2x,
+                            /src/images/jpeg/main/team/tablet/AS_tablet/AS_img.jpg   1x
+                            " media="(max-width: 1199px)" />
                     <source srcset="
-                            ./images/jpeg/main/team/desktop/AS_desktop/AS_img.jpg   1x,
-                            ./images/jpeg/main/team/desktop/AS_desktop/AS_img@2x.jpg 2x
+                    /src/images/jpeg/main/team/desktop/AS_desktop/AS_img@2x.jpg 2x,
+                            /src/images/jpeg/main/team/desktop/AS_desktop/AS_img.jpg   1x
                               " media="(min-width: 1200px)" />
-                    <img class="item-logo" src="./images/jpeg/main/team/mobile/AS_mobile/AS_img.jpg"
+                    <img class="item-logo" src="/src/images/jpeg/main/team/mobile/AS_mobile/AS_img.jpg"
                         alt="Andrew Shcevchenko photo" />
                 </picture>
                 <h3 class="team-member">Andrew Shcevchenko</h3>
@@ -141,7 +140,7 @@
                         <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-insta"></use>
                                 </svg>
                             </div>
                         </a>
@@ -150,7 +149,7 @@
                         <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </div>
                         </a>
@@ -159,7 +158,7 @@
                         <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </div>
                         </a>
@@ -168,7 +167,7 @@
                         <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </div>
                         </a>
@@ -178,18 +177,18 @@
             <li class="team-item">
                 <picture>
                     <source srcset="
-                                                ./images/jpeg/main/team/mobile/IN_mobile/IN_img.jpg 1x,
-                                                ./images/jpeg/main/team/mobile/IN_mobile/IN_img@2x.jpg 2x   
-                                                    " media="(max-width: 767px)" />
+                    /src/images/jpeg/main/team/mobile/IN_mobile/IN_img@2x.jpg 2x,
+                     /src/images/jpeg/main/team/mobile/IN_mobile/IN_img.jpg 1x
+                                                " media="(max-width: 767px)" />
                     <source srcset="
-                                                ./images/jpeg/main/team/tablet/IN_tablet/IN_img.jpg   1x,
-                                                ./images/jpeg/main/team/tablet/IN_tablet/IN_img@2x.jpg 2x
-                                                  " media="(max-width: 1199px)" />
+                    /src/images/jpeg/main/team/tablet/IN_tablet/IN_img@2x.jpg 2x,
+                     /src/images/jpeg/main/team/tablet/IN_tablet/IN_img.jpg   1x
+                                " media="(max-width: 1199px)" />
                     <source srcset="
-                                                ./images/jpeg/main/team/desktop/IN_desktop/IN_img.jpg   1x,
-                                                ./images/jpeg/main/team/desktop/IN_desktop/IN_img@2x.jpg 2x
-                                                  " media="(min-width: 1200px)" />
-                    <img class="item-logo" src="./images/jpeg/main/team/mobile/IN_mobile/IN_img.jpg"
+                    /src/images/jpeg/main/team/desktop/IN_desktop/IN_img@2x.jpg 2x,
+                     /src/images/jpeg/main/team/desktop/IN_desktop/IN_img.jpg   1x
+                                    " media="(min-width: 1200px)" />
+                    <img class="item-logo" src="/src/images/jpeg/main/team/mobile/IN_mobile/IN_img.jpg"
                         alt="Ivan's photo" />
                 </picture>
                 <h3 class="team-member">Ivan Nikolaenko</h3>
@@ -199,7 +198,7 @@
                         <a href="https://www.instagram.com/" aria-label="instagram" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-insta"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-insta"></use>
                                 </svg>
                             </div>
                         </a>
@@ -208,7 +207,7 @@
                         <a href="https://twitter.com/" aria-label="twitter" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </div>
                         </a>
@@ -217,7 +216,7 @@
                         <a href="https://www.facebook.com/" aria-label="facebook" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </div>
                         </a>
@@ -226,7 +225,7 @@
                         <a href="https://www.linkedin.com/feed/" aria-label="linkedIn" class="team-item-link">
                             <div width="44" height="44">
                                 <svg class="link-img" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="/src/images/svg/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </div>
                         </a>
