--- a/src/partials/main/hero.html
+++ b/src/partials/main/hero.html
@@ -1,4 +1,4 @@
 <section class="hero">
     <h1>Effective solutions <br> for your business</h1>
-    <a class="button" onclick="openModal()">Order a service</a>
+    <a class="button" onclick="ref.classList.remove('is-hidden');">Order a service</a>
 </section>
