--- a/src/partials/main/examples.html
+++ b/src/partials/main/examples.html
@@ -3,22 +3,22 @@
         <h2 class="examples-header">What we do</h2>
         <ul class="examples-list ">
             <li class="examples-item">
-                <img src="/src/images/jpeg/main/wedo/wedo_desktop/img.jpg" alt="desktop" srcset="
-                /src/images/jpeg/main/wedo/wedo_desktop/img@2x.jpg 2x,
-                                  /src/images/jpeg/main/wedo/wedo_desktop/img.jpg">
+                <img src="./images/jpeg/main/wedo/wedo_desktop/img.jpg" alt="desktop" srcset="
+                ./images/jpeg/main/wedo/wedo_desktop/img@2x.jpg 2x,
+                                  ./images/jpeg/main/wedo/wedo_desktop/img.jpg">
                 <p class="examples-item-descr">Desktop apps</p>
             </li>
             <li class="examples-item">
-                <img src="/src/images/jpeg/main/wedo/wedo_mobile/box.jpg" alt="mobile" srcset="
-                /src/images/jpeg/main/wedo/wedo_mobile/box@2x.jpg 2x
-                 /src/images/jpeg/main/wedo/wedo_mobile/box.jpg
+                <img src="./images/jpeg/main/wedo/wedo_mobile/box.jpg" alt="mobile" srcset="
+                ./images/jpeg/main/wedo/wedo_mobile/box@2x.jpg 2x
+                 ./images/jpeg/main/wedo/wedo_mobile/box.jpg
                   " />
                 <p class="examples-item-descr">Mobile apps</p>
             </li>
             <li class="examples-item">
-                <img src="/src/images/jpeg/main/wedo/wedo_design/img.jpg" alt="web solution" srcset="
-                                                /src/images/jpeg/main/wedo/wedo_design/img@2x.jpg 2x,
-                                                /src/images/jpeg/main/wedo/wedo_design/img.jpg" />
+                <img src="./images/jpeg/main/wedo/wedo_design/img.jpg" alt="web solution" srcset="
+                                                ./images/jpeg/main/wedo/wedo_design/img@2x.jpg 2x,
+                                               ./images/jpeg/main/wedo/wedo_design/img.jpg" />
                 <p class="examples-item-descr marg">Design</p>
             </li>
         </ul>
