--- a/src/partials/main/hero.html
+++ b/src/partials/main/hero.html
@@ -1,6 +1,7 @@
 <section class="hero">
     <h1>Effective solutions <br> for your business</h1>
     <a class="button"
-        onclick="{ const ref = document.querySelector('[data-modal]');  ref.classList.remove('is-hidden');}">Order a
+        onclick="{ const ref = document.querySelector('[data-modal]');  ref.classList.remove('is-hidden'); ref.focus();}">Order
+        a
         service</a>
 </section>
